# spa-portflio

./: .env  .env.devlopment  .gitignore  README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/api_dm/: serializers.py
backend/api_post/: urls.py
backend/api_post_image/: serializers.py
backend/api_user/: urls.py
backend/portfolio/: settings.py
backend/tests/factories/: models.py
bandsns/: .env.production  .firebaserc  buildspec.yml
bandsns/.firebase/: hosting.cHVibGlj.cache
bandsns/src/: App.css  App.js  firebase.js  index.js
bandsns/src/component/: InboxDM.js  Main.js  Navbar.js
bandsns/src/component/home/: Home.css
bandsns/src/component/profile/: Profile.js  ProfileManager.js
bandsns/src/context/: ApiPostImagesContext.js
django/: db.sqlite3
django/api_dm/: apps.py
django/api_post/: views.py
django/api_post_image/: views.py
django/api_user/: serializers.py
django/portfolio/: urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/component/home/: Home.js
frontend/src/context/: ApiContext.js  ApiPostContext.js
portfolio/api_dm/: urls.py  views.py
portfolio/api_post/: apps.py  serializers.py
portfolio/api_post_image/: apps.py  urls.py
portfolio/api_user/: views.py
portfolio/core/: admin.py  models.py
portfolio/core/migrations/: 0001_initial.py
portfolio/portfolio/: settings.py
portfolio/scripts/: create_sample.py
react/src/component/: ActionTypes.js  Ask.js  Login.js  Signup.js
react/src/component/pages/: Image.js
(+12 files in other folders)
